--- a/ng2/package.json
+++ b/ng2/package.json
@@ -60,7 +60,6 @@
     "@ngtools/webpack": "1.3.3",
     "@types/hammerjs": "2.0.34",
     "@types/jasmine": "2.5.45",
-    "@types/moment": "^2.13.0",
     "@types/node": "7.0.13",
     "@types/selenium-webdriver": "2.53.36",
     "@types/source-map": "0.5.0",
@@ -104,7 +103,7 @@
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "2.0.3",
     "material": "0.1.1",
-    "moment": "^2.19.2",
+    "moment": "2.19.2",
     "node-sass": "4.5.3",
     "path": "0.12.7",
     "postcss": "6.0.1",
