--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ node_js:
 cache:
   directories:
     - "node_modules"
-install: true
-script: npm install && npm run test:ci && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+script: npm run test:ci && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 deploy:
   provider: heroku
   api-key: 
