Added the SonarCloud script to the TravisCI build file.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ addons:
     organization: "damoresa-github"
     token:
       secure: $SONAR_TOKEN
-script: npm run test:ci && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+script:
+  - sonar-scanner
+  - npm run test:ci && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 deploy:
   provider: heroku
   api-key: 
