--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,6 +7,13 @@ sonar.projectVersion=1.0.4
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set. 
 sonar.sources=.
+
+# Exclude unit tests
+sonar.exclusions=**/*.spec.js
+
+# Properties specific to language plugins:
+#   - For JavaScript
+sonar.javascript.lcov.reportPath=./coverage/lcov.info
  
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
