--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,11 +9,11 @@ sonar.projectVersion=1.0.4
 sonar.sources=.
 
 # Exclude unit tests
-sonar.exclusions=**/*.spec.js
+sonar.exclusions=**/*.spec.js,coverage/*
 
 # Properties specific to language plugins:
 #   - For JavaScript
-sonar.javascript.lcov.reportPath=./coverage/lcov.info
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
  
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
