Updated coverage folder exclusions on the Sonnar runner configuration.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.projectVersion=1.0.4
 sonar.sources=.
 
 # Exclude unit tests
-sonar.exclusions=**/*.spec.js,coverage/*
+sonar.exclusions=**/*.spec.js,coverage/**/*
 
 # Properties specific to language plugins:
 #   - For JavaScript
