(chore): Attempting to fix Coveralls - TravisCI integration

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,11 @@ addons:
     organization: "damoresa-github"
     token:
       secure: $SONAR_TOKEN
-script: npm run test:ci && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && sonar-scanner
+script:
+  - npm run test:ci
+  - sonar-scanner
+after_success:
+  - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
 deploy:
   provider: heroku
   api_key:
