--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "sinon-express-mock": "1.3.1"
   },
   "dependencies": {
-    "bcrypt": "1.0.3",
+    "bcrypt": "3.0.4-napi",
     "body-parser": "1.18.1",
     "express": "4.15.4",
     "jwt-simple": "0.5.1",
